Fix layout issue in Edge
Alt tag was showing over the placeholder initials in Edge.
Hide image tag when we have no image to show.

--- a/src/web/components/global-nav/top-nav/project-account-switcher/_item/item.scss
+++ b/src/web/components/global-nav/top-nav/project-account-switcher/_item/item.scss
@@ -43,6 +43,10 @@
 
     color: transparent;
 
+    &[src=""] {
+        display: none;
+    }
+
     .hig__global-nav__top-nav__project-account-switcher__item--project & {
         width: 32px;
         height: 32px;
